ArizaKaydiDetay ve MyContext oluşturuldu

--- a/TeknikServisWebApp/TS.Web.MODEL/TS.Web.MODEL.csproj
+++ b/TeknikServisWebApp/TS.Web.MODEL/TS.Web.MODEL.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\ArizaKaydi.cs" />
+    <Compile Include="Entities\ArizaKaydiDetay.cs" />
     <Compile Include="Entities\Kategori.cs" />
     <Compile Include="IdentityModels\ApplicationRole.cs" />
     <Compile Include="IdentityModels\ApplicationUser.cs" />
