--- a/TeknikServisWebApp/TS.Web.UI/Views/web.config
+++ b/TeknikServisWebApp/TS.Web.UI/Views/web.config
@@ -17,6 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="TS.Web.UI" />
+        <add namespace="ST.UI.MVC" />
+        <add namespace="ST.Models.ViewModels"/>
+        <add namespace="Microsoft.AspNet.Identity" />
+        <add namespace="Microsoft.Owin.Security" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
