--- a/TeknikServisWebApp/AdminTema/Web.Debug.config
+++ b/TeknikServisWebApp/AdminTema/Web.Debug.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!-- Więcej informacji dotyczących korzystania z przekształceń pliku Web.config można znaleźć na stronie http://go.microsoft.com/fwlink/?LinkId=301874 -->
 
