--- a/TeknikServisWebApp/TS.Web.DAL/TS.Web.DAL.csproj
+++ b/TeknikServisWebApp/TS.Web.DAL/TS.Web.DAL.csproj
@@ -109,6 +109,10 @@
     <Compile Include="Migrations\201709071026507_a6.Designer.cs">
       <DependentUpon>201709071026507_a6.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709081513199_a8.cs" />
+    <Compile Include="Migrations\201709081513199_a8.Designer.cs">
+      <DependentUpon>201709081513199_a8.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MyContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -141,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709071026507_a6.resx">
       <DependentUpon>201709071026507_a6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709081513199_a8.resx">
+      <DependentUpon>201709081513199_a8.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
