--- a/TeknikServisWebApp/TS.Web.MODEL/TS.Web.MODEL.csproj
+++ b/TeknikServisWebApp/TS.Web.MODEL/TS.Web.MODEL.csproj
@@ -93,6 +93,7 @@
     <Compile Include="IdentityModels\ApplicationUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ArizaViewModel.cs" />
+    <Compile Include="ViewModels\KategoriViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MailModel.cs" />
     <Compile Include="ViewModels\ProfileViewModel.cs" />
