--- a/TeknikServisWebApp/TS.Web.DAL/packages.config
+++ b/TeknikServisWebApp/TS.Web.DAL/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.Material" version="1.1.4" targetFramework="net452" />
+  <package id="AngularJS.Animate" version="1.6.4" targetFramework="net452" />
+  <package id="AngularJS.Aria" version="1.6.4" targetFramework="net452" />
+  <package id="AngularJS.Core" version="1.6.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
