--- a/TeknikServisWebApp/TS.Web.UI/packages.config
+++ b/TeknikServisWebApp/TS.Web.UI/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.Material" version="1.1.4" targetFramework="net452" />
   <package id="angularjs" version="1.6.6" targetFramework="net452" />
+  <package id="AngularJS.Animate" version="1.6.4" targetFramework="net452" />
+  <package id="AngularJS.Aria" version="1.6.4" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.6.5" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
